graphite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphite
spec:
  selector:
    app.kubernetes.io/name: graphite
  ports:
    - port: 81
      name: graphite-ui
      protocol: TCP
      targetPort: nginx
    - port: 2003
      name: cbn-rcv-text
      protocol: TCP
      targetPort: cbn-rcv-text
    - port: 2004
      name: cbn-rcv-pickle
      protocol: TCP
      targetPort: cbn-rcv-pickle
    - port: 2023
      name: cbn-agg-text
      protocol: TCP
      targetPort: cbn-agg-text
    - port: 2024
      name: cbn-agg-pickle
      protocol: TCP
      targetPort: cbn-agg-pickle
    - port: 8126
      name: statsd-admin
      protocol: TCP
      targetPort: statsd-admin
    - port: 8080
      name: gunicorn
      protocol: TCP
      targetPort: gunicorn
    - port: 8125
      name: statsd
      protocol: UDP
      targetPort: statsd
