graphite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: graphite-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: columbo
    http:
      paths:
        - pathType: Prefix
          path: /graphite(/|$)(.*)
          backend:
            service:
              name: graphite
              port:
                number: 80
